# automlchain

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
automlchain/: __init__.py
automlchain/cli/: __init__.py  main.py
automlchain/cli/commands/: __init__.py  cancel.py  deploy.py  evaluate.py  status.py  train.py
automlchain/core/: __init__.py  config.py  exceptions.py  pipeline.py
automlchain/datasets/: __init__.py  manager.py  types.py  validators.py
automlchain/datasets/formats/: __init__.py  parsers.py
automlchain/evaluation/: __init__.py  suite.py
automlchain/evaluation/metrics/: __init__.py  core.py
automlchain/prompts/: __init__.py  engine.py  templates.py
automlchain/providers/: __init__.py  base.py  local.py  mock.py  pricing.py  registry.py  replicate.py  together.py
automlchain/training/: __init__.py  callbacks.py  jobs.py  orchestrator.py
automlchain/utils/: __init__.py  logging_config.py
notebooks/: real_training_tests.ipynb  smoke_tests.ipynb  test_local_provider.ipynb  test_local_provider_README.md
outputs/: train_local_mac_test.py  train_test_no_hp.py  train_test_with_hp.py  train_verify2.py
tests/: __init__.py  conftest.py  test_core.py  test_datasets.py  test_evaluation.py  test_prompts.py  test_providers.py  test_training.py
